# Forschungsseminar

accuracy_calculations/: .gitignore  README.md  setup.cfg
accuracy_calculations/accuracy_calculations/: accuracy_calculation_options.py  cleansing_raw_data.py  comparison_data_score_analysis.py  dispersion_between_timeseries.py  dispersion_no_comp.py  main_accuracy_score.py  missing_data.py  outliers__no_comp.py  outliers_no_comp.py  statistical_analysis_helper.py
accuracy_calculations/accuracy_calculations/dataset/: preanalysis_dataset.py  save_tdm_in_dataframe_pkl.py
accuracy_calculations/accuracy_calculations/misc/: extract_comparison_data.py
accuracy_calculations/accuracy_calculations/tests/: test_path_helper.py
base_library/: .gitignore  README.md  setup.cfg
base_library/base_library/: community_score.py  data_extraction_options.py  extract_data_and_comparison_data.py
base_library/base_library/dataset/: analyse_data.py  save_tdm_in_dataframe_pkl.py
base_library/base_library/tests/: test_path_helper.py
believability_calculations/: README.md  git_init_and_connect_to_remote.sh  setup.cfg
believability_calculations/believability_calculations/: believability_helper.py  believability_options.py  main_believability_calculation.py
believability_calculations/believability_calculations/tests/: test_path_helper.py
data_quality_calculations/: README.md  git_init_and_connect_to_remote.sh  setup.cfg
data_quality_calculations/data_quality_calculations/: data_quality_options.py  main_full_data_quality_calculation.py
objectivity_calculations/: README.md  git_init_and_connect_to_remote.sh  setup.cfg
objectivity_calculations/objectivity_calculations/: autocorrelation_objectivity.py  mean_objectivity.py  objectivity_calculation.py  objectivity_helper.py  objectivity_options.py  variance_objectivity.py
reputation_calculations/: README.md  git_init_and_connect_to_remote.sh  setup.cfg
reputation_calculations/reputation_calculations/: reputation_calculation.py  reputation_options.py
(+3 files in other folders)
