[metadata]
name=accuracy_calculations
version=0.0.1
author=Markus Tobias Geschonneck
author_email=tobigescho@gmail.com.de
long_description=file: README.md
download_url=https://gitlab.dlr.de/gesc_ma/accuracy_calculations
classifiers =
    Programming Language :: Python :: 3
[options]
install_requires=

packages = find:

[options.packages.find]
# This section is optional
# Each entry in this section is optional, and if not specified, the default values are:
# `where=.`, `include=*` and `exclude=` (empty).
include=accuracy_calculations*
exclude=examples*
    tools*
    docs*
    accuracy_calculations.tests*
